<resources>
    <string name="app_name">Shop</string>
    <string name="input_username">Input username</string>
    <string name="input_password">Input password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="input_product_name">Input product name</string>
    <string name="input_product_quantity">Input product quantity</string>
    <string name="input_supplier_name">Input supplier name</string>
    <string name="input_date">Input date(dd/mm/yyyy)</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="detail">Detail</string>
    <string name="product_name">Product name: %1$s</string>
    <string name="product_quantity">Quantity: %1$s</string>
    <string name="product_supplier">Supplier: %1$s</string>
    <string name="product_date">Date: %1$s</string>
</resources>